--- a/_config.yml
+++ b/_config.yml
@@ -20,9 +20,9 @@ navigation:                # accepts {file, title, url, icon, sidebaricon}
   - {file: "README.md", title: About Me, icon: address-card}
 
 external:                  # shows a footer with social links - for available icons see fontawesome.com/icons
-  - {title: Mail, icon: envelope, url: "mailto:niklasbuschmann@users.noreply.github.com"}
-  - {title: Github, icon: github, url: "https://github.com/niklasbuschmann/contrast"}
-  - {title: Subscribe, icon: rss, url: "/feed.xml"}
+  - {title: Mail, icon: envelope, url: "mailto:chelsealembert@gmail.com"}
+  - {title: Github, icon: github, url: "https://github.com/chelsea-lembert"}
+
 
 comments:
 #  disqus_shortname: ""    # see https://disqus.com/
