--- a/_config.yml
+++ b/_config.yml
@@ -16,8 +16,8 @@ minimal: false             # use a dark header
 # Menu
 
 navigation:                # accepts {file, title, url, icon, sidebaricon}
-  - {file: "Chelsea.pdf", title: "CV"}
-  - {file: "README.md", icon: address-card}
+  - {file: "Chelsea.pdf", title: "Resume"}
+  
 
 external:                  # shows a footer with social links - for available icons see fontawesome.com/icons
   - {title: Mail, icon: envelope, url: "mailto:chelsealembert@gmail.com"}
