--- a/_config.yml
+++ b/_config.yml
@@ -16,6 +16,7 @@ minimal: false             # use a dark header
 # Menu
 
 navigation:                # accepts {file, title, url, icon, sidebaricon}
+  - {url: "https://chelsea-lembert.github.io/", title: "Home"}
   - {file: "Chelsea.pdf", title: "Resume"}
   - {title: "Blog", file: "blog.md"}
   
