--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: "Chelsea Lembert"
-author: "Chelsea Lembert"
-description: "Old Dominion University"
+title: "Anthony Lembert"
+author: "Anthony Lembert"
+description: "Oregon State University"
 permalink: /:title/
 lang: "en"
 excerpt_separator: "\n\n\n"
@@ -16,7 +16,7 @@ minimal: false             # use a dark header
 # Menu
 
 navigation:                # accepts {file, title, url, icon, sidebaricon}
-  - {url: "https://chelsea-lembert.github.io/", title: "Home"}
+  - {url: "https://anthonylembert.github.io/", title: "Home"}
   - {title: "Resume", file: "resume.md"}
   - {title: "Blog", file: "blog.md"}
   
