--- a/_config.yml
+++ b/_config.yml
@@ -22,8 +22,8 @@ navigation:                # accepts {file, title, url, icon, sidebaricon}
   
 
 external:                  # shows a footer with social links - for available icons see fontawesome.com/icons
-  - {title: Mail, icon: envelope, url: "mailto:chelsealembert@gmail.com"}
-  - {title: Github, icon: github, url: "https://github.com/chelsea-lembert"}
+  - {title: Mail, icon: envelope, url: "mailto:anthony.lembert@gmail.com"}
+  - {title: Github, icon: github, url: "https://github.com/anthonylembert"}
 
 
 comments:
