--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: "Anthony Lembert, Resilience and Commitment in both Military Service and Academic Pursuits."
+title: "Anthony Lembert"
 author: "Anthony Lembert"
 description: "Oregon State University"
 permalink: /:title/
