--- a/_config.yml
+++ b/_config.yml
@@ -18,6 +18,7 @@ minimal: false             # use a dark header
 navigation:                # accepts {file, title, url, icon, sidebaricon}
   - {url: "https://anthonylembert.github.io/", title: "Home"}
   - {title: "Resume", file: "resume.md"}
+  - {title: "Projects", file: "projects.md"}
   - {title: "Blog", file: "blog.md"}
   
 
